# kyber

./: Cargo.toml
src/: cbd.rs  indcpa.rs  kem.rs  kex.rs  lib.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  reduce.rs  utils.rs
tests/: kex.rs  kyber.rs  testvector.rs
