[package]
name = "kyber"
version = "0.2.0-alpha.4"
authors = ["quininer kel <quininer@live.com>"]
description = "a CCA-secure module-lattice-based KEM"
repository = "https://github.com/quininer/kyber"
license = "MIT"
edition = "2018"

[features]
default = ["kyber768"]
kyber512 = []
kyber768 = []
kyber1024 = []

[dependencies]
rand_core = { version = "0.5", default-features = false }
sha3 = "0.9"
digest = "0.9"
subtle = "2"
arrayref = "0.3"
byteorder = "1.3"

[dev-dependencies]
rand = "0.7"
hex = "0.4"
